# inline-array

./: .gitignore  Cargo.toml  README.md
examples/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: identity.rs
src/: lib.rs  serde.rs
