[package]
name = "inline-array"
version = "0.1.5"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "efficient immutable inlinable byte array"
license = "MIT/Apache-2.0"
repository = "https://github.com/komora-io/inline-array"
keywords = ["multi-threaded", "performance", "io"]
categories = ["concurrency", "data-structures", "rust-patterns"]
readme = "README.md"

[features]
pagetable_zeroable = ["pagetable"]

[profile.release]
debug = true

[dependencies]
pagetable = { optional = true, version = "0.4" }
serde = { version = "1.0.171", optional = true }

[dev-dependencies]
bincode = "1.3.3"
quickcheck = "1.0.3"
