[package]
name = "inline-array"
version = "0.1.13"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "efficient immutable inlinable byte array"
license = "MIT OR Apache-2.0"
repository = "https://github.com/komora-io/inline-array"
keywords = ["multi-threaded", "performance", "io"]
categories = ["concurrency", "data-structures", "rust-patterns"]
readme = "README.md"

[features]
# this is for exercising the 32-bit functionality during test on 64-bit machines
fake_32_bit = []
concurrent_map_minimum = ["concurrent-map"]

[profile.release]
debug = true

[dependencies]
concurrent-map = { version = "5.0", features = ["serde"], optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
bincode = "1.3.3"
quickcheck = "1.0.3"
